translation-tool/inputs/source_meta/objects/HSvc_QuickNotesTemplates__c.object
<CustomObject>
    <fields>
        <fullName>HSvc_Active__c</fullName>
        <formula>IF( HSvc_ExpiryDate__c  &lt;  TODAY() , False, True)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HSvc_ActivityDescription__c</fullName>
        <label>Activity Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HSvc_ActivityTypeLookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Activity Type</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Hsvc_ActivityType__c.AvailableToUser__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>Hsvc_ActivityType__c.RecordType__c</field>
                <operation>equals</operation>
                <valueField>$Source.RecordType__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Hsvc_ActivityType__c</referenceTo>
        <relationshipLabel>Quick Notes Template</relationshipLabel>
        <relationshipName>Quick_Notes_Template</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HSvc_ActivityType__c</fullName>
        <label>Activity Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Agent Note</fullName>
                </value>
                <value>
                    <fullName>Customer Note</fullName>
                </value>
                <value>
                    <fullName>Consult</fullName>
                </value>
                <value>
                    <fullName>Escalation by Customer</fullName>
                </value>
                <value>
                    <fullName>Customer Escalation Response</fullName>
                </value>
                <value>
                    <fullName>Inbound Email</fullName>
                </value>
                <value>
                    <fullName>Outbound Email</fullName>
                </value>
                <value>
                    <fullName>ARRIVAL</fullName>
                </value>
                <value>
                    <fullName>STOP</fullName>
                </value>
                <value>
                    <fullName>ETA</fullName>
                </value>
                <value>
                    <fullName>CLOSURE</fullName>
                </value>
                <value>
                    <fullName>Case Creation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HSvc_EffectiveDate__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>Effective Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HSvc_End_Date_Time__c</fullName>
        <label>End Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>HSvc_ExpiryDate__c</fullName>
        <label>Expiry Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HSvc_Provider_Group__c</fullName>
        <label>Provider Group</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>RecordType__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>TP Monterrey MOD</fullName>
                </value>
                <value>
                    <fullName>TP Monterrey Universal</fullName>
                </value>
                <value>
                    <fullName>SDG Colombia</fullName>
                </value>
                <value>
                    <fullName>South America Control Center</fullName>
                </value>
                <value>
                    <fullName>Hughes Colombia Distributor</fullName>
                </value>
                <value>
                    <fullName>Universal</fullName>
                </value>
                <value>
                    <fullName>Hughes Panama Distributor</fullName>
                </value>
                <value>
                    <fullName>SDG Panama</fullName>
                </value>
                <value>
                    <fullName>TP Monterrey MOD Panama</fullName>
                </value>
                <value>
                    <fullName>Hughes de Colombia</fullName>
                </value>
                <value>
                    <fullName>Hughes de Panama</fullName>
                </value>
                <value>
                    <fullName>Hughes de Ecuador</fullName>
                </value>
                <value>
                    <fullName>Hughes de Chile</fullName>
                </value>
                <value>
                    <fullName>Hughes de Peru</fullName>
                </value>
                <value>
                    <fullName>Hughes de Corporate(HQ)</fullName>
                </value>
				<value>
                    <fullName>Ent SA Frontline</fullName>
                </value>
                <value>
                    <fullName>Ent SA Field Support</fullName>
                </value>
                <value>
                    <fullName>Ent SA Control Desk</fullName>
                </value>
                <value>
                    <fullName>Ent SA Business Analyst</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HSvc_Start_Date_Time__c</fullName>
        <label>Start Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Hsvc_Language__c</fullName>
        <description>Languages which are supported in SAD</description>
        <label>Language</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Hsvc_Languages</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>RecordType__c</fullName>
        <label>Record Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>B2B General Case</fullName>
                </value>
                <value>
                    <fullName>B2C General Case</fullName>
                </value>
                <value>
                    <fullName>Repair Work Order</fullName>
                </value>
                <value>
                    <fullName>Install Work Order</fullName>
                </value>
                <value>
                    <fullName>RMA</fullName>
                </value>
                <value>
                    <fullName>Office Only</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Quick Notes Template</label>
    <listViews>
        <fullName>All</fullName>
        <columns>RecordType__c</columns>
        <columns>NAME</columns>
        <columns>HSvc_ActivityTypeLookup__c</columns>
        <columns>HSvc_ActivityDescription__c</columns>
        <columns>HSvc_EffectiveDate__c</columns>
        <columns>HSvc_ExpiryDate__c</columns>
        <columns>HSvc_Active__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Quick Activity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Quick Activity Template</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>HSvc_ExpiryDateCannotBeSetUpInPast</fullName>
        <active>true</active>
        <errorConditionFormula>OR(HSvc_ExpiryDate__c &lt; TODAY(),HSvc_ExpiryDate__c &lt; HSvc_EffectiveDate__c)</errorConditionFormula>
        <errorDisplayField>HSvc_ExpiryDate__c</errorDisplayField>
        <errorMessage>Expiry Date cannot be set in past and cannot be less than the effective date</errorMessage>
    </validationRules>
</CustomObject>